--- a/package.json
+++ b/package.json
@@ -17,14 +17,23 @@
     "@react-navigation/stack": "^7.6.14",
     "date-fns": "^4.1.0",
     "expo": "~54.0.31",
+    "expo-background-fetch": "~14.0.9",
+    "expo-clipboard": "~8.0.8",
     "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
+    "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
+    "expo-intent-launcher": "~13.0.8",
+    "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
+    "expo-mail-composer": "~15.0.8",
+    "expo-notifications": "~0.32.16",
+    "expo-print": "~15.0.8",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-task-manager": "~14.0.9",
     "expo-updates": "~29.0.16",
     "firebase": "^12.8.0",
     "react": "19.1.0",
